ignore binary .class file

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ annotation3.sql
 .mymetadata
 .project
 .settings
+/displaytag.properties
+/ehcache.xml
+/log4j.properties
+/messages_en.properties
+/messages_zh_CN.properties
+/notification.properties
+/org/
+/path_config.properties
+*.class
